# CogLoop

./: .gitignore  CHANGELOG_EMBEDDED.md  CogletNet.md  LICENSE  MAM.md  README.md  UPSTASH_VECTOR_README.md  check_llm_server.py  check_server_embedded.py  llm_service_check_results.json  pyproject.toml  requirements.txt  run_test.py  test_env.py  upstash_vector_demo.py
docs/utils/: id_generator.md  mam.md
src/: __init__.py  check_llm.py  vector_store.py
src/cogletnet/core/: cogletnet.py  coglets.py  mam.py
src/cogletnet/utils/: id_generator.py  logging.py  vector_store.py
src/core/: coglet.py  cognitive_loop.py  mam_model.md
src/utils/: config.py  prompts_config.py  vector_store.py  weight_update.py
tests/: conftest.py  test_cogletnet.py  test_coglets.py  test_mam.py  test_vector_id.py  test_vector_store.py
tests/unit/: test_llm_service.py  test_mam.py  test_vector_store.py
